deployments/informer/informerDeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: informer
  namespace: as
spec:
  replicas: 3
  selector:
    matchLabels:
      app: informerappas
  minReadySeconds: 10
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: informerappas
    spec:
      containers:
      - image: davidmachacek/informer:v1
        name: informercontaineras
        readinessProbe:
          periodSeconds: 10
          httpGet:
            path: /actuator/health
            port: 8080
